2005-12-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: fixed backlinks search to return classname rather
	than index.
	* test/GrampsDbBase_Test.py: added test for limiting classes 
	returned from backlink search
	
2005-12-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsBSDDB.py: reference_map now uses keys rather 
	than class names
	* src/GrampsDbBase.py: reference_map now uses keys rather 
	than class names
	* test/GrampsDbBase_Test.py: reference_map now uses keys rather 
	than class names

2005-12-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsDbBase.py: fixed UNDO buffer issue
	* test/GrampsDbBase_Test.py: improved performance test
	* test/RunAllTests.py: added -p cmdline flag
	
2005-12-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: added work around for cursor set not 
	returing None.
	* test/GrampsDbBase_Test.py: corrected indent as found by Benny
	
2005-12-16 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* test/GrampsDbBase_Test.py: added a crude performance test.
	* test/RunAllTests.py: fixed log level setting.
	
2005-12-16 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: reindex_reference_map added to rebuild the 
	reference_map when upgrading database
	* test/RunAllTests.py: script to run multiple unittests
	* test/GrampsDbBase_Test.py: unittest to test reference_map table 
	implementation.
	
2005-12-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: Window management completed
	* src/ViewManger.py: progress bar added back in
	* src/ReadXML.py: handle markers

2005-12-15  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py: go back to a single load function;
	finish gramps_upgrade_9.
	* src/ViewManager: Go back to the old way of load/upgrade.
	* src/RelLib.py (RepoRef): Typos.
	* src/Utils.py: Typos.

2005-12-15 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/GrampsBSDDB.py: added delete support for the 