@@ -1,3 +1,7 @@
+2005-12-17  Don Allingham  <don@gramps-project.org>
+	* src/GrampsBSDDB.py: associate functions return str instead
+	of unicode
+
 2005-12-17 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
 	* src/GrampsBSDDB.py: fixed backlinks search to return classname rather
 	than index.
